@@ -1,6 +1,5 @@
 020121220 Correo suplantación de identidad en windows live, ver si faltan cabeceras
 20121220 Bottle da erro 104, reiniciado remote machine , creo es proiteccion de descarga windows
-20121220 Dirección ip del intergaz y luego nombre  para enlace, HACE FALTA LOS DOS
 20121220 Meter localzone en settings
 20121308 Hacer un informe de que documentos no ha leído
 20130116 Contador de conexiones http
@@ -8,4 +7,3 @@
 20130118 Hay mucha cpu consumida en secretaria
 20130118 Los cerrados no deben estar en memoria, solo los activos
 20130118 Hacer widget monthSelector para controlar los meses dentro de los cerrados
-20130213 Poner un puerto distinto en settings, falla
