@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>398</width>
-    <height>313</height>
+    <width>433</width>
+    <height>309</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -103,7 +103,7 @@
    <item>
     <widget class="QTabWidget" name="tab">
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="tabGenerales">
       <attribute name="title">
@@ -177,14 +177,14 @@ p, li { white-space: pre-wrap; }
       <layout class="QVBoxLayout" name="verticalLayout_4">
        <item>
         <layout class="QFormLayout" name="formLayout_2">
-         <item row="0" column="0">
+         <item row="1" column="0">
           <widget class="QLabel" name="label_3">
            <property name="text">
-            <string>Server IP address</string>
+            <string>Server name/IP address for mails</string>
            </property>
           </widget>
          </item>
-         <item row="0" column="1">
+         <item row="1" column="1">
           <widget class="QLineEdit" name="txtWebServerIP">
            <property name="toolTip">
             <string>Must be the IP of the server, with visibility for users</string>
@@ -194,20 +194,40 @@ p, li { white-space: pre-wrap; }
            </property>
           </widget>
          </item>
-         <item row="1" column="0">
+         <item row="2" column="0">
           <widget class="QLabel" name="label_4">
            <property name="text">
             <string>Server port</string>
            </property>
           </widget>
          </item>
-         <item row="1" column="1">
+         <item row="2" column="1">
           <widget class="QLineEdit" name="txtWebServerPort">
            <property name="text">
             <string>8000</string>
            </property>
            <property name="alignment">
             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="0">
+          <widget class="QLabel" name="interfaceIPLabel">
+           <property name="text">
+            <string>Interface IP</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1">
+          <widget class="QComboBox" name="cmbInterfaces">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="toolTip">
+            <string>Web server Interface IP</string>
            </property>
           </widget>
          </item>
